--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# Test folder
+test/
+
 # C extensions
 *.so
 
@@ -174,3 +177,25 @@ cython_debug/
 .pypirc
 
 .vscode
+*.pdf
+*.bin
+*.txt
+*.lz77
+*.json
+*.csv
+*.log
+*.pickle
+*.pkl
+*.h5
+*.hdf5
+*.hdf
+*.deflate
+*.zip
+*.tar
+*.tar.gz
+*.tar.bz2
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.test_results
